Added some basic structure for files.

--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: crystabit
 version: 0.1.0
 
 authors:
-  - Esa Koskinen <koskinen_e@worksap.co.jp>
+  - Esa Koskinen <esakoskin2@gmail.com>
 
 targets:
   crystabit:
