shard.yml: Added dependencies for kemal-spec and crecto. Fixed CPU return typing.

--- a/shard.yml
+++ b/shard.yml
@@ -15,3 +15,7 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+  spec-kemal:
+    github: kemalcr/spec-kemal
+  crecto:
+    github: fridgerator/crecto
